# planetary_system

./: .gitignore  CMakeLists.txt  README.md
examples/systems/: example1.json
include/: Planet.hpp  aux.hpp  constants.hpp  forces.hpp  planet.hpp  planet_system.hpp  simulation_scenario.hpp
scripts/: plain_plotting.py  plot_gravity_logs.py
src/: Planet.cpp  aux.cpp  forces.cpp  main.cpp  planet.cpp  planet_system.cpp  simulation_scenario.cpp
tests/: test_gravity.cc
